--- a/Day02/exercise/soal2/style.css
+++ b/Day02/exercise/soal2/style.css
@@ -19,6 +19,104 @@ body {
     font-family: "Barlow Semi Condensed";
 }
 
+img {
+    width: 28px;
+    border-radius: 50%;
+    border: solid transparent;
+}
+
+#page-1 img {
+    width: 28px;
+    border-radius: 50%;
+    border: solid var(--purple-300);
+}
+
+#page-5 img {
+    width: 28px;
+    border-radius: 50%;
+    border: solid var(--purple-300);
+}
+
+
+.name {
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 13px;
+}
+
+.verified {
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 11px;
+    opacity: 50%;
+}
+
+.profile {
+    position: relative;
+    left: 32px;
+    top: 26px;
+}
+
+span {
+    display: block;
+    position: relative;
+    left: 45px;
+    top: -32px;
+}
+
+.title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: auto;
+    margin: 10px 32px;
+}
+
+.content {
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 18px;
+    opacity: 70%;
+    margin: 18px 32px;
+}
+
+#page-1 {
+    grid-area: area1;
+    background-color: var(--purple-500);
+    background-image: url(./assets/bg-pattern-quotation.svg);
+    background-repeat: no-repeat;
+    background-position: 90% top;
+    border-radius: 10px;
+    color: var(--white);
+}
+
+#page-2 {
+    grid-area: area2;
+    background-color: var(--grey-500);
+    border-radius: 10px;
+    color: var(--white);
+}
+
+#page-3 {
+    grid-area: area3;
+    background-color: var(--white);
+    border-radius: 10px;
+    color: var(--grey-500);
+}
+
+#page-4 {
+    grid-area: area4;
+    background-color: var(--white);
+    border-radius: 10px;
+    color: var(--grey-500);
+}
+
+#page-5 {
+    grid-area: area5;
+    background-color: var(--dark-blue);
+    border-radius: 10px;
+    color: var(--white);
+}
+
 /* Desktop */
 @media screen and (min-width: 481px) {
 
@@ -27,111 +125,16 @@ body {
         height: 572px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 266px 266px;
+        grid-template-rows: 282px 266px;
         row-gap: 24px;
         column-gap: 30px;
         grid-template-areas:
             "area1 area1 area2 area3"
             "area4 area5 area5 area3";
         margin: 164px auto;
+        overflow-x: hidden;
     }
 
-    #page-1 {
-        grid-area: area1;
-        background-color: var(--purple-500);
-        background-image: url(./assets/bg-pattern-quotation.svg);
-        background-repeat: no-repeat;
-        background-position: 90% top;
-        border-radius: 10px;
-        color: var(--white);
-    }
-
-    #page-2 {
-        grid-area: area2;
-        background-color: var(--grey-500);
-        border-radius: 10px;
-        color: var(--white);
-    }
-
-    #page-3 {
-        grid-area: area3;
-        background-color: var(--white);
-        border-radius: 10px;
-        color: var(--grey-500);
-    }
-
-    #page-4 {
-        grid-area: area4;
-        background-color: var(--white);
-        border-radius: 10px;
-        color: var(--grey-500);
-    }
-
-    #page-5 {
-        grid-area: area5;
-        background-color: var(--dark-blue);
-        border-radius: 10px;
-        color: var(--grey-200);
-    }
-
-    img {
-        width: 28px;
-        border-radius: 50%;
-    }
-
-    #page-1 img {
-        width: 28px;
-        border-radius: 50%;
-        border: solid var(--purple-300);
-    }
-
-    #page-5 img {
-        width: 28px;
-        border-radius: 50%;
-        border: solid var(--purple-300);
-    }
-
-
-    .name {
-        font-size: 13px;
-        font-weight: 500;
-        line-height: 13px;
-    }
-
-    .verified {
-        font-size: 11px;
-        font-weight: 500;
-        line-height: 11px;
-        opacity: 50%;
-    }
-
-    .profile {
-        position: relative;
-        left: 32px;
-        top: 26px;
-    }
-
-    span {
-        display: block;
-        position: relative;
-        left: 45px;
-        top: -32px;
-    }
-
-    .title {
-        font-size: 20px;
-        font-weight: 600;
-        line-height: auto;
-        margin: 10px 32px;
-    }
-
-    .content {
-        font-size: 13px;
-        font-weight: 500;
-        line-height: 18px;
-        opacity: 70%;
-        margin: 18px 32px;
-    }
 
 }
 
@@ -150,102 +153,7 @@ body {
             "area4"
             "area5";
         margin: 28px auto;
-    }
-
-    #page-1 {
-        grid-area: area1;
-        background-color: var(--purple-500);
-        background-image: url(./assets/bg-pattern-quotation.svg);
-        background-repeat: no-repeat;
-        background-position: 90% top;
-        border-radius: 10px;
-        color: var(--white);
-    }
-
-    #page-2 {
-        grid-area: area2;
-        background-color: var(--grey-500);
-        border-radius: 10px;
-        color: var(--white);
-    }
-
-    #page-3 {
-        grid-area: area3;
-        background-color: var(--white);
-        border-radius: 10px;
-        color: var(--grey-500);
-    }
-
-    #page-4 {
-        grid-area: area4;
-        background-color: var(--white);
-        border-radius: 10px;
-        color: var(--grey-500);
-    }
-
-    #page-5 {
-        grid-area: area5;
-        background-color: var(--dark-blue);
-        border-radius: 10px;
-        color: var(--white);
-    }
-
-    img {
-        width: 28px;
-        border-radius: 50%;
-    }
-
-    #page-1 img {
-        width: 28px;
-        border-radius: 50%;
-        border: solid var(--purple-300);
-    }
-
-    #page-5 img {
-        width: 28px;
-        border-radius: 50%;
-        border: solid var(--purple-300);
-    }
-
-    .name {
-        font-size: 13px;
-        font-weight: 500;
-        line-height: 13px;
-    }
-
-    .verified {
-        font-size: 11px;
-        font-weight: 500;
-        line-height: 11px;
-        opacity: 50%;
-    }
-
-    .profile {
-        position: relative;
-        left: 32px;
-        top: 26px;
-    }
-
-    span {
-        display: block;
-        position: relative;
-        left: 45px;
-        top: -32px;
-    }
-
-    .title {
-        font-size: 20px;
-        font-weight: 600;
-        line-height: auto;
-        margin: 10px 32px;
-    }
-
-    .content {
-        font-size: 13px;
-        font-weight: 500;
-        line-height: 18px;
-        opacity: 70%;
-        margin: 18px 32px;
+        overflow-x: hidden;
     }
 
 }
