--- a/Day02/exercise/soal1/style.css
+++ b/Day02/exercise/soal1/style.css
@@ -63,7 +63,7 @@
     }
 
     #discount {
-        font-family: "Fraunces" sans-serif;
+        font-family: "Fraunces", sans-serif;
         font-size: 32px;
         font-weight: bold;
         line-height: 32px;
@@ -168,7 +168,7 @@
     }
 
     #discount {
-        font-family: "Fraunces" sans-serif;
+        font-family: "Fraunces", sans-serif;
         font-size: 32px;
         font-weight: bold;
         line-height: 32px;
